@@ -19,13 +19,18 @@
         <!--
             Java source/target to use for compilation.
           -->
-        <java.version>19</java.version>
+        <java.version>17</java.version>
 
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <!--
             Name of the benchmark Uber-JAR to generate.
           -->
         <uberjar.name>benchmarks</uberjar.name>
+
+        <mockito.version>5.17.0</mockito.version>
+        <junit.version>4.13.2</junit.version>
+        <junit-jupiter.version>5.13.0-M2</junit-jupiter.version>
+        <junit-platform.version>1.13.0-M2</junit-platform.version>
     </properties>
 
     <dependencyManagement>
@@ -34,6 +39,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.7.18</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit-jupiter.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -179,19 +191,8 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>2.20.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.9.0</version>
-            <scope>test</scope>
+            <version>${mockito.version}</version>
         </dependency>
 
         <dependency>
@@ -199,28 +200,34 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
             <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
+                <!-- 如果不需要Junit4，则排除该 junit-vintage-engine 依赖 -->
+<!--                <exclusion>-->
+<!--                    <groupId>org.junit.vintage</groupId>-->
+<!--                    <artifactId>junit-vintage-engine</artifactId>-->
+<!--                </exclusion>-->
             </exclusions>
         </dependency>
+        <!-- junit4 -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- junit5 -->
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.10.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -242,8 +249,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.12.1</version>
                 <configuration>
-                    <source>19</source>
-                    <target>19 </target>
+                    <source>${java.version}</source>
+                    <target>${java.version} </target>
                 </configuration>
             </plugin>
             <plugin>
@@ -251,22 +258,19 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <parallel>methods</parallel>
-                    <threadCount>10</threadCount>
+                    <argLine>${argLine} -Dfile.encoding=UTF-8 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED </argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+<!--                    <includeJUnit5Engines>-->
+<!--                        <engine>junit-jupiter</engine>-->
+<!--                        <engine>junit-vintage</engine>-->
+<!--                    </includeJUnit5Engines>-->
+                    <skipTests>false</skipTests>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <reuseForks>true</reuseForks>
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
-                <!-- 引入junit4 和 junit5 的依赖，则 junit4 和 junit5 的单元测试用例都会执行；否则仅执行一种，这里默认是执行 junit5 -->
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.10.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.vintage</groupId>
-                        <artifactId>junit-vintage-engine</artifactId>
-                        <version>5.9.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <!-- 命令: mvn test 是生成 text和xml的测试报告 -->
             <!-- 命令: mvn surefire-report:report 生成html的单测报告 -->
@@ -278,12 +282,35 @@
                     <showSuccess>true</showSuccess>
                 </configuration>
             </plugin>
-            <!-- 命令: mvn cobertura:cobertura 生成测试覆盖率报告html -->
+            <!-- 使用jacoco生成单元测试覆盖率报告 -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.11</version>
+                <configuration>
+                    <skip>false</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+            <!-- 命令: mvn cobertura:cobertura 生成测试覆盖率报告html -->
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>cobertura-maven-plugin</artifactId>-->
+<!--                <version>2.7</version>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
